<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context="com.kupferwerk.myappportfolio.MainActivity">

   <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/title"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <Button
      android:id="@+id/popularMovies"
      style="@style/ButtonStyle"
      android:layout_width="@dimen/button_width"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/popular_movies" />

   <Button
      android:id="@+id/stockHawk"
      style="@style/ButtonStyle"
      android:layout_width="@dimen/button_width"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/stock_hawk" />

   <Button
      android:id="@+id/buildItBigger"
      style="@style/ButtonStyle"
      android:layout_width="@dimen/button_width"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/build_it_bigger" />

   <Button
      android:id="@+id/makeYourAppMaterial"
      style="@style/ButtonStyle"
      android:layout_width="@dimen/button_width"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/make_your_app_material" />

   <Button
      android:id="@+id/goUbiquitous"
      style="@style/ButtonStyle"
      android:layout_width="@dimen/button_width"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/go_ubiquitous" />

   <Button
      android:id="@+id/capstone"
      style="@style/ButtonStyle"
      android:layout_width="@dimen/button_width"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/capstone" />

</LinearLayout>
